Terraform/sec-grp.tf
resource "aws_security_group" "docker_3000" {
  name        = "Docker-only-sg"
  description = "Allow 3000 & SSH access"
  vpc_id = aws_vpc.name.id

  ingress {
    description = "SSH from my IP"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg"
  }
}
